ui: enhance required field indicators with visual styling

--- a/templates/default/api_key_add.html
+++ b/templates/default/api_key_add.html
@@ -17,7 +17,7 @@
                     <input type="hidden" name="_token" value="{{ csrf_token }}">
                     
                     <div class="mb-3">
-                        <label for="name" class="form-label">{% trans %}Name{% endtrans %} *</label>
+                        <label for="name" class="form-label">{% trans %}Name{% endtrans %} <span class="text-danger">*</span></label>
                         <input type="text" class="form-control" id="name" name="name" required maxlength="255" placeholder="{% trans %}My application{% endtrans %}">
                         <div class="invalid-feedback">{% trans %}Provide a name for this API key{% endtrans %}</div>
                         <div class="form-text">{% trans %}A descriptive name to help you identify this key{% endtrans %}</div>
