--- a/templates/default/edit_perm_templ.html
+++ b/templates/default/edit_perm_templ.html
@@ -21,7 +21,7 @@
                 <div class="card-body">
                     
                     <div class="mb-3">
-                        <label for="templ_name" class="form-label">{% trans %}Name{% endtrans %} *</label>
+                        <label for="templ_name" class="form-label">{% trans %}Name{% endtrans %} <span class="text-danger">*</span></label>
                         <input class="form-control form-control-sm" type="text" id="templ_name" name="templ_name" value="{{ templ['name'] }}" required>
                         <div class="invalid-feedback">{% trans %}Provide a name for your template{% endtrans %}</div>
                         <small class="text-muted">{% trans %}A short, descriptive name for this permission set{% endtrans %}</small>
