fix: prevent installation failures with special characters in passwords, related to #647

--- a/install/templates/step4.html.twig
+++ b/install/templates/step4.html.twig
@@ -55,7 +55,8 @@
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <span class="form-text small">{% trans %}Password for this database user.{% endtrans %}</span>
+                                <span class="form-text small">{% trans %}Password for this database user.{% endtrans %}<br>
+                                <small class="text-muted">{% trans %}Avoid quotes, backslashes, and line breaks.{% endtrans %}</small></span>
                             </div>
                         </div>
 
