--- a/install/templates/step5.html.twig
+++ b/install/templates/step5.html.twig
@@ -73,7 +73,8 @@
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <span class="form-text small">{% trans %}The password for this username.{% endtrans %}</span>
+                                <span class="form-text small">{% trans %}The password for this username.{% endtrans %}<br>
+                                <small class="text-muted">{% trans %}Avoid quotes, backslashes, and line breaks.{% endtrans %}</small></span>
                             </div>
                         </div>
                     </div>
