--- a/templates/modern/header.html
+++ b/templates/modern/header.html
@@ -7,10 +7,18 @@
     <!-- CSS only -->
     <link href="vendor/twbs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="vendor/twbs/bootstrap-icons/font/bootstrap-icons.css">
-    <link id="theme-stylesheet" rel="stylesheet" href="{{ theme_base_path }}/{{ theme }}/style/{{ iface_style }}.css?time={{ file_version }}" type="text/css">
-    {% if custom_theme_exists %}
-    <link id="custom-theme-stylesheet" rel="stylesheet" href="{{ theme_base_path }}/{{ theme }}/style/custom_{{ iface_style }}.css?time={{ file_version }}" type="text/css">
-    {% endif %}
+    <script>
+        // Determine correct theme before loading stylesheets to prevent FOUC
+        const savedTheme = localStorage.getItem('style');
+        const serverTheme = '{{ iface_style }}';
+        const correctTheme = (savedTheme === 'light' || savedTheme === 'dark') ? savedTheme : serverTheme;
+        
+        // Load the correct stylesheet immediately
+        document.write('<link id="theme-stylesheet" rel="stylesheet" href="{{ theme_base_path }}/{{ theme }}/style/' + correctTheme + '.css?time={{ file_version }}" type="text/css">');
+        {% if custom_theme_exists %}
+        document.write('<link id="custom-theme-stylesheet" rel="stylesheet" href="{{ theme_base_path }}/{{ theme }}/style/custom_' + correctTheme + '.css?time={{ file_version }}" type="text/css">');
+        {% endif %}
+    </script>
     <script type="text/javascript" src="assets/helper.js?time={{ file_version }}"></script>
     <script type="text/javascript" src="assets/userSettings.js?time={{ file_version }}"></script>
 </head>
