--- a/templates/modern/style/dark.css
+++ b/templates/modern/style/dark.css
@@ -785,6 +785,10 @@ input[type=number]::-webkit-outer-spin-button {
     color: #f8d7da !important;
 }
 
+.text-danger {
+    color: #e0e0e0 !important;
+}
+
 .alert-success {
     background-color: #0f5132 !important;
     border-color: #0a3622 !important;
