--- a/templates/default/list_perm_templ.html
+++ b/templates/default/list_perm_templ.html
@@ -28,7 +28,7 @@
                 {% else %}
                 {% for template in permission_templates %}
                 <tr>
-                    <td><strong>{{ template['name'] }}</strong></td>
+                    <td>{{ template['name'] }}</td>
                     <td>{{ template['descr'] }}</td>
                     <td class="text-end">
                         <div class="gap-2">
