--- a/templates/default/header.html
+++ b/templates/default/header.html
@@ -164,7 +164,7 @@
                         </a></li>
                         {% endif %}
                         {% if perm_is_godlike and api_enabled %}
-                        <li><a class="dropdown-item {{ current_page == 'api_keys' ? 'active' : '' }}" href="/api/keys">
+                        <li><a class="dropdown-item {{ current_page == 'api_keys' ? 'active' : '' }}" href="/settings/api-keys">
                             <i class="bi bi-key-fill me-2"></i>{% trans %}API Keys{% endtrans %}
                         </a></li>
                         {% endif %}
