--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -369,7 +369,7 @@
             <div class="card-body d-flex flex-column justify-content-between">
                 <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}API Keys{% endtrans %}</h6>
                 <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Manage API access keys{% endtrans %}</p>
-                <a href="/api/keys" class="btn btn-light btn-sm mt-2" data-testid="api-keys-link">
+                <a href="/settings/api-keys" class="btn btn-light btn-sm mt-2" data-testid="api-keys-link">
                     <span class="d-none d-lg-inline">{% trans %}Manage API Keys{% endtrans %}</span>
                     <span class="d-lg-none">{% trans %}API Keys{% endtrans %}</span>
                 </a>
