--- a/templates/modern/api_key_regenerate.html
+++ b/templates/modern/api_key_regenerate.html
@@ -63,7 +63,7 @@
             </div>
         </div>
 
-        <form method="post" action="index.php?page=api_keys&amp;action=regenerate&amp;id={{ api_key.id }}">
+        <form method="post" action="/settings/api-keys/{{ api_key.id }}">
             <input type="hidden" name="_token" value="{{ csrf_token }}">
             
             <div class="d-flex gap-2">
